--- a/webapp/view/Root.view.xml
+++ b/webapp/view/Root.view.xml
@@ -1,11 +1,5 @@
 <mvc:View controllerName="foreign.travel.ytravel.controller.Root" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
 	<Shell id="shell">
-		<App id="app">
-			<pages>
-				<Page id="page" title="{i18n>title}">
-					<content></content>
-				</Page>
-			</pages>
-		</App>
+		<SplitApp id="app"></SplitApp>
 	</Shell>
 </mvc:View>
